--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.t3sl4</groupId>
-    <artifactId>TextFileEncoder</artifactId>
+    <artifactId>TextFileEncryption</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>TextFileEncoder</name>
+    <name>TextFileEncryption</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
